[gd_scene load_steps=2 format=3 uid="uid://v7ab6whasykk"]

[ext_resource type="Script" uid="uid://bi4nnnvmy2wmf" path="res://flying_object/flying_object.gd" id="1_xdy4x"]

[node name="FlyingObject" type="Area2D"]
collision_layer = 2
script = ExtResource("1_xdy4x")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(3.6, 3.6)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
